--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,39 @@ body {
     color: #282f37;
     background: #67c7a0;
 }
+
+
+@font-face {
+    font-family: 'social';
+    src: url('../../public/icons/fonts/social.eot?gtsvmk');
+    src: url('../../public/icons/fonts/social.eot?gtsvmk#iefix') format('embedded-opentype'),
+        url('../../public/icons/fonts/social.ttf?gtsvmk') format('truetype'),
+        url('../../public/icons/fonts/social.woff?gtsvmk') format('woff'),
+        url('../../public/icons/fonts/social.svg?gtsvmk#social') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'social' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-google:before {
+    content: "\ea88";
+}
+
+.icon-github:before {
+    content: "\eab0";
+}
